--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "next": "^13.5.4",
     "react": "latest",
     "react-dom": "latest",
-    "react-icons": "^4.11.0",
-    "three": "^0.157.0"
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "autoprefixer": "latest",
