--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "autoprefixer": "latest",
+    "eslint": "8.50.0",
+    "eslint-config-next": "13.5.4",
     "postcss": "latest",
     "tailwindcss": "latest"
   }
