--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "next": "^13.5.4",
     "react": "latest",
     "react-dom": "latest",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "react-intersection-observer": "^9.5.2",
+    "react-spring": "^9.7.3",
+    "react-use-gesture": "^9.1.3"
   },
   "devDependencies": {
     "autoprefixer": "latest",
