--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.88.4",
+    "@react-three/fiber": "^8.15.3",
     "framer-motion": "^10.16.4",
     "next": "^13.5.4",
     "react": "latest",
@@ -16,7 +18,8 @@
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
     "react-spring": "^9.7.3",
-    "react-use-gesture": "^9.1.3"
+    "react-use-gesture": "^9.1.3",
+    "three": "^0.157.0"
   },
   "devDependencies": {
     "autoprefixer": "latest",
